--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -68,7 +68,7 @@ jobs:
           context: ./backend
           push: ${{ github.event_name != 'pull_request' }}
           # tags: ${{ steps.set-img-tag.outputs.img-tag }}
-          tags: test-gh
+          tags: ${{ secrets.YC_CI_REGISTRY }}/${{ secrets.YC_CI_REGISTRY_ID }}/logo-base-image:test-gh
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
