--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:sk/uMyWN,iv:ZUb/eQEgyNBnH4N6O3U1joD8WbB7Q/ds/hjEY4TYEro=,tag:g/Tq9HHPepAbezW9S49s4A==,type:str]
-    repository: ENC[AES256_GCM,data:ngaus5fX2nsWegqqL8CHzjF9TyndRxqiLUKdNuKZ2aGPpr+2D7Y=,iv:za3n4DsjHJwS7LiUS1ocSTpmSYA9bd+OlwFNIIsFwUI=,tag:iDL9As95opR5hUb10Yodcg==,type:str]
+    tag: ENC[AES256_GCM,data:WpMmb05+,iv:UxKPvKpKF8+x4dHUQa0i8xkeuc0s9wQE5hTmo/yguF4=,tag:xqC7CdS9pb09xZK2vV5T1w==,type:str]
+    repository: ENC[AES256_GCM,data:awf8ZOn5of/NS6AIihLsbfxezm7tU5a/j7BFWAac3uGTFp7RCM8=,iv:TtpD9UFlOhDNoR3zGNunhKB1BxhrUev/b49cbbsNYoY=,tag:3JEysNcT9EFVHEH3bW7aug==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:1IpmKw==,iv:O9JNsaqvJGTHbyznwbKOAsLCMRPrUueDBqS/gmx+GBU=,tag:dMuQg5PA2WyVkKmR78X3KA==,type:bool]
+    enabled: ENC[AES256_GCM,data:UepzUQ==,iv:GRwkDqwdJTKLAb4xMuEQ1WdIVIzzj4+i+utg8Dj+jrg=,tag:adZ2IzLKX/JG8KKbdHwsHg==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:yxXzObTERvUtk9/BERB1sXKpwFo=,iv:0KbrDzqW7lRsvXhMITBD4YN14//wc394tuoAkGPlLfA=,tag:wMH2YcQvNAKEsLCPLiS0UQ==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:iDlVxoiQh3aeMTjx,iv:cAgZoTHmZnorHzbg/kk9m+MJMb7giCFfUuoB9amv+t8=,tag:eZkUzhSqVhpDpEIcyUCUkw==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:yiJix1uVZR+mL2IY,iv:GcNiDrZryN/d1GNQtBWQasviav9FTSIh2aH/tT1m3zI=,tag:EE0IPtcWiZOeY2c9L+hgng==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:zqTFn+6zTeFt8cwX73o4WrGhccg=,iv:3pOOmcaZoSOCefrQuSbBAHsWv+gQF6n4YVrWZyZB4fo=,tag:sT5EF7PhWh1z99mTm05Reg==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:y1AO9dLBtYlOMMq4szNQOdXkRY4=,iv:a1ZwAe/eRhsx9V+U8T6T7r272K8fC+btmYaEE0fTzmc=,tag:w77vH2OsBCwm5GVnSDKfTQ==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:81EP4jL5SRwSE6ng,iv:GFUAoj2n6ztMv5gw7tBnQ0h0qP3+0TwIT/OWXDTEy+8=,tag:BLpQYweUii4zq8P9VZBatA==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:JvEtdTCy94rGFZy8,iv:g6IAzIv+vMa4vE62K8e0/b/s8hyy7CRFciKB2UabE7U=,tag:jfHcIE0zoVmkvlKVMgqM7A==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:ZuvaCqQVjpkYhpH5qFuIPGpIR3U=,iv:q/UpIyDT5du3yMLwWl3YQdmk4vqgBcLJgOpgeaVLhfI=,tag:BavKzylmmUGZ/ebVtkbasw==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:FVWzqssvctxyiW9dGtoZiZEDNkGWaMbIK7tEUQY=,iv:6rfcerxLh9Zi1YyFcDvzYK+bR/UtBI882Q0EU5Rm/WQ=,tag:PwLEkkJjscU0Hpz9WXZ5hA==,type:str]
+        - host: ENC[AES256_GCM,data:Jio6vJZrSuA9wCs4CxyRQohf4Q2m/yhW6XdIOc0=,iv:VBTOgxkQr0cl0CK8TdFy4/GB0o53C6QN2G7IUyfrEv0=,tag:Sasv5FU9oRchmO6N0E2ruA==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:Mg==,iv:Qlj2yPZBkDJpUtsr4o+ev/cgAZb2J3lp7OfmkpeTZ8M=,tag:0gQGoQh6Kc3lhYO9ztwFcQ==,type:str]
-              pathType: ENC[AES256_GCM,data:27VDfW8vh3TVTclMULg0guu/W4q9Pw==,iv:rIFmBtCH8PrXl8oYQYv67xADQP+jigmW61n7yU/ax8E=,tag:czzpNf51h+/hyiXwVKjeZg==,type:str]
+            - path: ENC[AES256_GCM,data:Lw==,iv:LbwZ5jNOTIyHyqn4jYROoMpQJoWLYl5ERCKyHKSaT50=,tag:pgzxl/E5romZSczkKKfyEA==,type:str]
+              pathType: ENC[AES256_GCM,data:pAOpdZlmhuWcrwmvCoKL8zONB0pO7A==,iv:ZDA9/M7XAj2kdz+B1SFtB2MOU5XImY9MSCNZbpuWsJ4=,tag:8nagDzU733OGJjasTPn12w==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:CelupvzEfd4xiRve47KF+lwOz8clV5/f7lpfJp8=,iv:zWK/Wul3RzTgnpjj21OTiwWY4c/RvmpZiiX2k/RMLhs=,tag:lgRr4BO0BWe4X8C9QSfAJA==,type:str]
-          secretName: ENC[AES256_GCM,data:J4P61ibzhxn8yao1TVVw2rQZdHJlx7ATqDTQOnpx9y/roiXcXOMo,iv:DOSo2YiboOcBDTrwoa5SzPAUS6XpDKAcm8h1FxCpwRY=,tag:FXMGWnD3YZqLdF8yO+Hg8w==,type:str]
+            - ENC[AES256_GCM,data:TpT+t3HeRHG4r3v4295fNlewLOJiuWqq50bJgMM=,iv:PQWRXzMSq0YMKtxRRohLT70F/8BkyBCmM0pXsd/hh+s=,tag:oWydWLnQ5Fc/JkdC6Ak7iA==,type:str]
+          secretName: ENC[AES256_GCM,data:JMJxFdim2ZIeYMF2EOcWqYpcHzCbrVr73etilWGfmikN8SuOSueO,iv:M6SDb3f9brMZ7vKpYJ2+Sdl83mSPvB58vTbRKaqm/Iw=,tag:34NSRfOADRh7+qo4TjcGzA==,type:str]
 service:
-    type: ENC[AES256_GCM,data:trV3utZFEzQ=,iv:a7W3+DUIEwPPsw8mq134UYPQoDJLwK4mipfDVCf8egU=,tag:G8m1SEFPFSRCJeZv8YbBnA==,type:str]
-    nodePort: ENC[AES256_GCM,data:QcG4P+g=,iv:C70yzIbI4fbdwXrUAhvTnMpJyDhz+93HYSlXEw731zI=,tag:ZCbB9wSR3sfLarjvIUnJTQ==,type:int]
+    type: ENC[AES256_GCM,data:nisM7Y0os6I=,iv:Kb8T/ZIRLiYBvpw6siX8LzquKXiWUIzR4VF3cu2ySbc=,tag:wOwAEjGXyJ3XI7oLQGzxLw==,type:str]
+    nodePort: ENC[AES256_GCM,data:YH3rMts=,iv:A7gXrEz1PWkiPO1f7NkhygsClddUwIUCsCYrdu7Q4dM=,tag:yIp36ZxNNsvs9EUQyMkpXw==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYckxIdWZ0SnNqZEI4eGht
-            WE9EQlFqbS9IajN3WVpRYUQ2VDhJRzNLUVZrClZzTytKSG5NYk5SdmZkV3hPdEh3
-            bU5DaU9mbzI0SGYyQ2s4K2EzRGcwK1UKLS0tIDhJc3hZcmZUTzZYRVg1bnY3SnBY
-            anVZNkRjQmhTck9ZUVY4Ri9YNTM1U2sKgbDmzm/ssPfzLDTullDFzGiqQvWX75Zy
-            o3cga0fd/fSfIxeHR2Iys+38bic4VpjgoCRvGc4xRuHeVfzqF4AYzg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtRm1DMDRjOXRBWmdMQmNv
+            M3RPQzVXVUdZaTZkNjRTeThOL01GTTQ2RUUwClE1WCtmVjE5ek1vUVMyK21Ld2Nx
+            ODZjNjdtY0hCS2w3RXZqdWFLWEZRSFEKLS0tIGI1bXM3clc1Vk5peVlVZm9FVDlB
+            V29KY0pkdUtRR3BUMmRTbG8xZTh4SEEKx2ajpD/BJXIAA6fJntg8bHEMvkaotit+
+            g5JR7K4xo9blUMwQ12SZdC+TiYOyotF7cybsNjfiTy1PR0GUguevpg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-04-27T22:44:42Z"
-    mac: ENC[AES256_GCM,data:sqkYSiZN0Cd576r8a/wLV/cWiWahhee73zxcFdIsdGehUla73qyHPWqFDAQOBF5hRMeP6VoOitWfjtdbUU7qA2E/jgR5MK0+gUtN7SLqpOYyk9yBzyRyzrcBwOnEVORZQlSBRxT0b5elUiwF6uzXnnT6EZmdyAB0YuKZzBgDRA0=,iv:TRWJukEqWMfjJzy8iYeR2sRujdaQGgIPnLK5tITQ0xQ=,tag:KPsaxK3hGKAgA86u2YtgNw==,type:str]
+    lastmodified: "2023-04-30T13:59:17Z"
+    mac: ENC[AES256_GCM,data:V9dL5c7l2ZyyxMFPSIbTLNYtZSBk/cpb/sMXZZvnCx6B+UzC5uUGvYkFfzRgBn6jpdUzIzgqYVaF2DkEWdaiYUyFPjQhaijUa+tNCpFTzqodv7wegaCIurCHqE56STwMLncjXotWnqceotZ3uuSFUBjySjG693Jn986LGofeS3U=,iv:M20DCX3OpL7jv02YQEDyHxvdU6E8EWMoteS9oyR8n8U=,tag:wKIfJZCccOQ0dko7KFW15g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
