Update node ports once more as they are conflicting with infra

--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:WpMmb05+,iv:UxKPvKpKF8+x4dHUQa0i8xkeuc0s9wQE5hTmo/yguF4=,tag:xqC7CdS9pb09xZK2vV5T1w==,type:str]
-    repository: ENC[AES256_GCM,data:awf8ZOn5of/NS6AIihLsbfxezm7tU5a/j7BFWAac3uGTFp7RCM8=,iv:TtpD9UFlOhDNoR3zGNunhKB1BxhrUev/b49cbbsNYoY=,tag:3JEysNcT9EFVHEH3bW7aug==,type:str]
+    tag: ENC[AES256_GCM,data:pr++irLz,iv:WlLdTlsL15vIY42Khz3vbraKE8ovqYXcezCtZH6gXcI=,tag:LnsmbahqkSr9EMCCLuOPTw==,type:str]
+    repository: ENC[AES256_GCM,data:IHt71YxHCgyASteFzmKjSS12BwHAQPXVCSkUk77zU5Uv+sKyYes=,iv:rtSrft7rsPcnnW2ztkUqlp0bQW6elZH69w5ueTciKT8=,tag:0/Iv7vgWkNiEEDxaAcm7oA==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:UepzUQ==,iv:GRwkDqwdJTKLAb4xMuEQ1WdIVIzzj4+i+utg8Dj+jrg=,tag:adZ2IzLKX/JG8KKbdHwsHg==,type:bool]
+    enabled: ENC[AES256_GCM,data:92uv7g==,iv:0d+Fuuv2Jj4KesVr70xkgTtNNh3olgtxyKJXruljx5E=,tag:9qBwoRsZDHhJcNuSG41e/Q==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:y1AO9dLBtYlOMMq4szNQOdXkRY4=,iv:a1ZwAe/eRhsx9V+U8T6T7r272K8fC+btmYaEE0fTzmc=,tag:w77vH2OsBCwm5GVnSDKfTQ==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:81EP4jL5SRwSE6ng,iv:GFUAoj2n6ztMv5gw7tBnQ0h0qP3+0TwIT/OWXDTEy+8=,tag:BLpQYweUii4zq8P9VZBatA==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:JvEtdTCy94rGFZy8,iv:g6IAzIv+vMa4vE62K8e0/b/s8hyy7CRFciKB2UabE7U=,tag:jfHcIE0zoVmkvlKVMgqM7A==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:ZuvaCqQVjpkYhpH5qFuIPGpIR3U=,iv:q/UpIyDT5du3yMLwWl3YQdmk4vqgBcLJgOpgeaVLhfI=,tag:BavKzylmmUGZ/ebVtkbasw==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:CtZ8NzSon30LqqkJ3nARkByNUDE=,iv:j69vpeUWNVxWw6v+SGnKq7dEjBBc6IAGgS8ls9b8Z+s=,tag:g5tqP/Wcpj1lIik/pX6zUQ==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:D3TvYh8Jt7Ay34IX,iv:c/L6R3k5f8DNxODbav+jHr5nuy1hf4Ipaiwq0/EssW4=,tag:DYtA6VriARyMOvcd1+R8SA==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:GB3z8bY24iFN1bBv,iv:soqDGjxay8tRG6WeegxFBaTj92xQIEJ36m19vyTyfpE=,tag:pfw0y1SBzFs5H8sjY9oboA==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:D0JRp2ovUCm7ZJhAPmHRXJxXWQw=,iv:ZYOQae8Jhsjrv3wZ9DOdv9USZaGlxS2S9zcWLx9dKiY=,tag:U/Zr7Yba5vDMMm1mtBUpTA==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:Jio6vJZrSuA9wCs4CxyRQohf4Q2m/yhW6XdIOc0=,iv:VBTOgxkQr0cl0CK8TdFy4/GB0o53C6QN2G7IUyfrEv0=,tag:Sasv5FU9oRchmO6N0E2ruA==,type:str]
+        - host: ENC[AES256_GCM,data:ipaYwGQCn96mIlWA8/cnithzAc2uFW8Za1J1ee8=,iv:AWWgCRMa11gGU6TXxPg7+TGwI9rYrj8w5dlyqVyYKlI=,tag:HIGTkt/d6/ZrSRHRfS5FQg==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:Lw==,iv:LbwZ5jNOTIyHyqn4jYROoMpQJoWLYl5ERCKyHKSaT50=,tag:pgzxl/E5romZSczkKKfyEA==,type:str]
-              pathType: ENC[AES256_GCM,data:pAOpdZlmhuWcrwmvCoKL8zONB0pO7A==,iv:ZDA9/M7XAj2kdz+B1SFtB2MOU5XImY9MSCNZbpuWsJ4=,tag:8nagDzU733OGJjasTPn12w==,type:str]
+            - path: ENC[AES256_GCM,data:LQ==,iv:XPnEleqHMnUFBH3D5aZUg1NuZzJWMMmcGI0HynKm2oU=,tag:RVEYrskOk+9FaOPCjbnSeQ==,type:str]
+              pathType: ENC[AES256_GCM,data:mCWvrHFPWDVBs6/W34nLIkrRXg5WWQ==,iv:gyQ7IG7+OxetiovJQmXNJKop7PAV4abzfGyNrvwhAfY=,tag:6RmGj2H/yfA8Zg8bOIKNsg==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:TpT+t3HeRHG4r3v4295fNlewLOJiuWqq50bJgMM=,iv:PQWRXzMSq0YMKtxRRohLT70F/8BkyBCmM0pXsd/hh+s=,tag:oWydWLnQ5Fc/JkdC6Ak7iA==,type:str]
-          secretName: ENC[AES256_GCM,data:JMJxFdim2ZIeYMF2EOcWqYpcHzCbrVr73etilWGfmikN8SuOSueO,iv:M6SDb3f9brMZ7vKpYJ2+Sdl83mSPvB58vTbRKaqm/Iw=,tag:34NSRfOADRh7+qo4TjcGzA==,type:str]
+            - ENC[AES256_GCM,data:lATNh/Ns1Hg2eVTomW9MRdU9BgOOgd3PWZvPi5I=,iv:fgQPS0oLDUoj1LPuSXw5k0WllwLV7KnnM88FebrmKPk=,tag:7cZq0Gn8b/kAnV2GdmSVIw==,type:str]
+          secretName: ENC[AES256_GCM,data:VM3cXIgzdwzUgxLfbjIK6YpTW4Br5KLqp94J1DilTsdb/wm9qNO/,iv:ysFrj8O4/R02SaKENllG+UhGwHK+B7S5p/G7Bs9DAj8=,tag:QE0TqMN16Oa3AWDYOvEtyA==,type:str]
 service:
-    type: ENC[AES256_GCM,data:nisM7Y0os6I=,iv:Kb8T/ZIRLiYBvpw6siX8LzquKXiWUIzR4VF3cu2ySbc=,tag:wOwAEjGXyJ3XI7oLQGzxLw==,type:str]
-    nodePort: ENC[AES256_GCM,data:YH3rMts=,iv:A7gXrEz1PWkiPO1f7NkhygsClddUwIUCsCYrdu7Q4dM=,tag:yIp36ZxNNsvs9EUQyMkpXw==,type:int]
+    type: ENC[AES256_GCM,data:YbVVtiod9Pw=,iv:OQkMsqlURF/TCdPgz0lEoG4KDBqZ/GKpHYDa+ZZrWHk=,tag:XJYJw75nb3PFas49dXlvlA==,type:str]
+    nodePort: ENC[AES256_GCM,data:tesKhuA=,iv:4Ms9ZKGAgR2AxxxmLRSQKn7Q5cNsJiY+2ITPSQyytsE=,tag:r0O2kE0WAeB8QHOl3OmTkQ==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtRm1DMDRjOXRBWmdMQmNv
-            M3RPQzVXVUdZaTZkNjRTeThOL01GTTQ2RUUwClE1WCtmVjE5ek1vUVMyK21Ld2Nx
-            ODZjNjdtY0hCS2w3RXZqdWFLWEZRSFEKLS0tIGI1bXM3clc1Vk5peVlVZm9FVDlB
-            V29KY0pkdUtRR3BUMmRTbG8xZTh4SEEKx2ajpD/BJXIAA6fJntg8bHEMvkaotit+
-            g5JR7K4xo9blUMwQ12SZdC+TiYOyotF7cybsNjfiTy1PR0GUguevpg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5TlNaRkVlMG5JaGN1Unln
+            NGp1eEpkbUJqYU1PWmU3UUM0VzhvTWZha21BCmtjSm1aUFNmcWZQY0E1ajl6N1Az
+            KzNDeU5oKzZqRU50VmhWZSt3QXlaM2cKLS0tIC9JNWdyUzF1V1hEemExbStHdXJv
+            bEo4bHJIaEVtS0t3eE15NCtoS3lYcUEKwcouItgjVBGwV8rip9ppXjVsavjlrDcl
+            hWVppcu5t+zkNqpCym53mZ6LJ0Og6ZQDNQRDLViN6WtVlcOdQVJrHA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-04-30T13:59:17Z"
-    mac: ENC[AES256_GCM,data:V9dL5c7l2ZyyxMFPSIbTLNYtZSBk/cpb/sMXZZvnCx6B+UzC5uUGvYkFfzRgBn6jpdUzIzgqYVaF2DkEWdaiYUyFPjQhaijUa+tNCpFTzqodv7wegaCIurCHqE56STwMLncjXotWnqceotZ3uuSFUBjySjG693Jn986LGofeS3U=,iv:M20DCX3OpL7jv02YQEDyHxvdU6E8EWMoteS9oyR8n8U=,tag:wKIfJZCccOQ0dko7KFW15g==,type:str]
+    lastmodified: "2023-04-30T14:05:12Z"
+    mac: ENC[AES256_GCM,data:69At5iCDVX1+VC4yOLNC1ZGE389YUymo0RiqMsBBOCuvvcmUxAeHdHFfI32P0MLoJfuPwV0jhqFueGdQpGROyTiR7SQ0pxicauPql63gBScCIX48jqXe2Eh34XBwX8MNRdcbs3TRd5mjdYq0IqAsNBeHJFBeniO65ZSd5MFs1h8=,iv:FZ2xQXbivrf0g/9tn8H89gZAh1j+CZ7fbWzTyb4QzS0=,tag:TNfyddATg2VPs8yk7GSFQg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
