Filter paths for backend tests workflow

--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -3,8 +3,12 @@ name: Test Backend Apps
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - backend/**
   pull_request:
     branches: [ "main" ]
+    paths:
+      - backend/**
   workflow_dispatch:
     branches: [ "main" ]
 
