--- a/backend/app/logo_api/docker-compose.tests.yaml
+++ b/backend/app/logo_api/docker-compose.tests.yaml
@@ -57,8 +57,13 @@ services:
       REDIS_PASSWORD: *c-redis-password
     ports:
       - "6370:6379"
+    volumes:
+      - ./docker-data-volumes/redis:/bitnami/redis/data
 
   s3-storage:
     image: zenko/cloudserver
+    command: yarn run mem_backend
     ports:
-      - "8001:8000"
+      - "50000:8000"
+    volumes:
+      - ../../../s3config.json:/usr/src/app/config.json
