Up worker version; up API and UI versions in prod

--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:pr++irLz,iv:WlLdTlsL15vIY42Khz3vbraKE8ovqYXcezCtZH6gXcI=,tag:LnsmbahqkSr9EMCCLuOPTw==,type:str]
-    repository: ENC[AES256_GCM,data:IHt71YxHCgyASteFzmKjSS12BwHAQPXVCSkUk77zU5Uv+sKyYes=,iv:rtSrft7rsPcnnW2ztkUqlp0bQW6elZH69w5ueTciKT8=,tag:0/Iv7vgWkNiEEDxaAcm7oA==,type:str]
+    tag: ENC[AES256_GCM,data:DfqVnLyI,iv:0nTCCIq8qbzwGK4z4G4quqErbvbsgzooaU+1eVLaVSU=,tag:Qyte9c9AZIHIxgHnQWVdRg==,type:str]
+    repository: ENC[AES256_GCM,data:s1I278DApjZHkYhIX0YgMing63uHYKoHHWHsl3fbf83JWoHZO+E=,iv:uqEMum1v8Rl4qiLS4J/ntk2UqRb2NMQLAbYOqalnImo=,tag:Je466cQApy+HOAunAqvAQQ==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:92uv7g==,iv:0d+Fuuv2Jj4KesVr70xkgTtNNh3olgtxyKJXruljx5E=,tag:9qBwoRsZDHhJcNuSG41e/Q==,type:bool]
+    enabled: ENC[AES256_GCM,data:k8GK6A==,iv:oJ4LDnAexXgiOaVzD+ZV+XznC8yhLaL1eaxIR9GTw5A=,tag:fa2yLEgmEOzuX0KHI/PwcA==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:CtZ8NzSon30LqqkJ3nARkByNUDE=,iv:j69vpeUWNVxWw6v+SGnKq7dEjBBc6IAGgS8ls9b8Z+s=,tag:g5tqP/Wcpj1lIik/pX6zUQ==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:D3TvYh8Jt7Ay34IX,iv:c/L6R3k5f8DNxODbav+jHr5nuy1hf4Ipaiwq0/EssW4=,tag:DYtA6VriARyMOvcd1+R8SA==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:GB3z8bY24iFN1bBv,iv:soqDGjxay8tRG6WeegxFBaTj92xQIEJ36m19vyTyfpE=,tag:pfw0y1SBzFs5H8sjY9oboA==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:D0JRp2ovUCm7ZJhAPmHRXJxXWQw=,iv:ZYOQae8Jhsjrv3wZ9DOdv9USZaGlxS2S9zcWLx9dKiY=,tag:U/Zr7Yba5vDMMm1mtBUpTA==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:D+eor0ORtnA8pm21+yfzmMjDArU=,iv:5hmFenju5Vcxfh+60oWKPpWgGYft7a+OyFXz9HcCxfg=,tag:mU8iYclSurIwEXzIrDCW2A==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:dEvi9v6iSZhXaQ7q,iv:lo2GzJ7fOmnzA0GXBcfjTZvF+z2ZnpN0PIt9nvtzua4=,tag:SmIr2nOkC65yluGPBWG5AA==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:hLpCwrgl6cNv+sMm,iv:E8TOteB86+b5uf92xUIgJ2MI8yPUyNwAjEIHcmdgP24=,tag:Qwq8FKV4Cr+vDzrlW1DE2w==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:yoCAuo6qogPz9rYfFqrRtbS3nxE=,iv:deiJuvMBEdhMVuidfK6EdIXIWvb31kKN0/gXIFUlIsM=,tag:+aExl4h0QcZ/kg20Zvw+EQ==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:ipaYwGQCn96mIlWA8/cnithzAc2uFW8Za1J1ee8=,iv:AWWgCRMa11gGU6TXxPg7+TGwI9rYrj8w5dlyqVyYKlI=,tag:HIGTkt/d6/ZrSRHRfS5FQg==,type:str]
+        - host: ENC[AES256_GCM,data:Cwcexcf820K1aBzoQjLmwu+P0EpWq03/43rWFrs=,iv:dXuyAbk8ZpY6XGKabaEkOZO5/f2eseaMoW01fSZXK68=,tag:IRKRPpfd0ulLYuWaiyvkUQ==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:LQ==,iv:XPnEleqHMnUFBH3D5aZUg1NuZzJWMMmcGI0HynKm2oU=,tag:RVEYrskOk+9FaOPCjbnSeQ==,type:str]
-              pathType: ENC[AES256_GCM,data:mCWvrHFPWDVBs6/W34nLIkrRXg5WWQ==,iv:gyQ7IG7+OxetiovJQmXNJKop7PAV4abzfGyNrvwhAfY=,tag:6RmGj2H/yfA8Zg8bOIKNsg==,type:str]
+            - path: ENC[AES256_GCM,data:cQ==,iv:hqbGMGGaD9X7Jt/pd8iBj0Z8MRewLrsJ+Q1o7ZeDlNM=,tag:MSCfomof5BOxtanAS9TmeQ==,type:str]
+              pathType: ENC[AES256_GCM,data:q3PDoquzVygd1edr+uEiC2tg7jKQTA==,iv:yf+62L+xGr9Fucjhg80UfSYDLwk5ktmIYIhLrWR8sgw=,tag:8PbfWZlQ1ZioIF4h4RslFw==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:lATNh/Ns1Hg2eVTomW9MRdU9BgOOgd3PWZvPi5I=,iv:fgQPS0oLDUoj1LPuSXw5k0WllwLV7KnnM88FebrmKPk=,tag:7cZq0Gn8b/kAnV2GdmSVIw==,type:str]
-          secretName: ENC[AES256_GCM,data:VM3cXIgzdwzUgxLfbjIK6YpTW4Br5KLqp94J1DilTsdb/wm9qNO/,iv:ysFrj8O4/R02SaKENllG+UhGwHK+B7S5p/G7Bs9DAj8=,tag:QE0TqMN16Oa3AWDYOvEtyA==,type:str]
+            - ENC[AES256_GCM,data:OvGr6KkRWgpWFIAfMhb8uZwYkd2BdOAkDl64nSo=,iv:zKCerJpGcIALEgJKpz1qrnUDOcfHLLx1FPwjXcTKe48=,tag:H0VMNPFIjiuV6j+GM8T9Mg==,type:str]
+          secretName: ENC[AES256_GCM,data:JoyKL+oIWs8MUEoZ2svlHb2bbZJgLPBsrxRDqepLiFViv1KXr8yJ,iv:N3GBk9YYdmVNqgHCbuZI61vtf5c+PrDsG3snzix4tYs=,tag:oMOv28CxC4PJXhUzAPUsuw==,type:str]
 service:
-    type: ENC[AES256_GCM,data:YbVVtiod9Pw=,iv:OQkMsqlURF/TCdPgz0lEoG4KDBqZ/GKpHYDa+ZZrWHk=,tag:XJYJw75nb3PFas49dXlvlA==,type:str]
-    nodePort: ENC[AES256_GCM,data:tesKhuA=,iv:4Ms9ZKGAgR2AxxxmLRSQKn7Q5cNsJiY+2ITPSQyytsE=,tag:r0O2kE0WAeB8QHOl3OmTkQ==,type:int]
+    type: ENC[AES256_GCM,data:9JR+2R1/ZM4=,iv:RK+zPODqmUZR2XYlZQyKR6OV/PcFytLn1MlMJlIvdX8=,tag:qexPRQBFdFSSe4/mNX1Bvg==,type:str]
+    nodePort: ENC[AES256_GCM,data:hLUWx/o=,iv:5NRg+XrbNR1WJ93kbnxhe0VOPMxF8Kf9Joj9YIGVvLA=,tag:tCzcDwQiEbWYWQ5ZwqnFpw==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5TlNaRkVlMG5JaGN1Unln
-            NGp1eEpkbUJqYU1PWmU3UUM0VzhvTWZha21BCmtjSm1aUFNmcWZQY0E1ajl6N1Az
-            KzNDeU5oKzZqRU50VmhWZSt3QXlaM2cKLS0tIC9JNWdyUzF1V1hEemExbStHdXJv
-            bEo4bHJIaEVtS0t3eE15NCtoS3lYcUEKwcouItgjVBGwV8rip9ppXjVsavjlrDcl
-            hWVppcu5t+zkNqpCym53mZ6LJ0Og6ZQDNQRDLViN6WtVlcOdQVJrHA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxRnc0MzU4dEtMOWtYRnVi
+            TERNaHQ2dXBQemt1MkdzdzRmUzludEVic1NzCmVvUTZFcURwR1cyY213em8zTHB6
+            TUZBUDUzRkdpeHh6d29BVVlhSzg4TXcKLS0tIGdYUjl4eTFnOFo3TGFldFlYVTV2
+            UWhXSHVPbFRKUW5XN0RmSDhHMllMNlEK5+g6ZxS+yxLkGNMwT/GoeFaoPy7fFteS
+            7NoxP64yDBaEI59zSto99d1bKuxcGDWLR/1GogyTSw7TBFtafRM9zg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-04-30T14:05:12Z"
-    mac: ENC[AES256_GCM,data:69At5iCDVX1+VC4yOLNC1ZGE389YUymo0RiqMsBBOCuvvcmUxAeHdHFfI32P0MLoJfuPwV0jhqFueGdQpGROyTiR7SQ0pxicauPql63gBScCIX48jqXe2Eh34XBwX8MNRdcbs3TRd5mjdYq0IqAsNBeHJFBeniO65ZSd5MFs1h8=,iv:FZ2xQXbivrf0g/9tn8H89gZAh1j+CZ7fbWzTyb4QzS0=,tag:TNfyddATg2VPs8yk7GSFQg==,type:str]
+    lastmodified: "2023-05-02T10:22:29Z"
+    mac: ENC[AES256_GCM,data:0wDV4/Cb0Fu2NRYPpfMmbvusZj7QQDQC7IkovZZKyGX55OEdB2vLsXUyytSL8Pziv47V+548zpW4x9aGw+lQUeOjaWWFDaTZDKeMM0SSecw8QwThjcACi8MgRz6riVXZarTpiSaZyJvF29vPDnDDXbJ0Eks5N4A8PPcwwq3ZCt4=,iv:ZcDmUSESEcdUbitEcQ4UPoK5BLCWgHgtAYGlL/ftjiw=,tag:IR0BeMumF0oafc9/UwV4zw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
